# learn-greek-easy

./: .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .preview-wake.txt  CLAUDE.md  CONTRIBUTING.md  EXR-00.audit.md  RALPH_PROMPT.md  RALPH_TEAMS_PROMPT.md  README.md  check-frontend.sh  codecov.yml  docker-compose.dev.yml  docker-compose.yml  install-router.sh  railway.json  settings.local copy.json
learn-greek-easy-backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  TESTING.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.json  run.py
learn-greek-easy-backend/alembic/: env.py
learn-greek-easy-backend/alembic/versions/: 20251121_1629_8e2ce3fe8e88_initial_schema_with_users_decks_cards_.py  20251126_1831_d606f59197e7_add_last_login_at_and_last_login_ip_.py  20251218_1441_75d4214a9e4f_add_feedback_and_votes_tables.py  20251219_1206_2c5f04bd7dfd_add_preferred_language_to_user_settings.py  20251221_1016_56fef805c407_add_xp_and_achievements_tables.py  20251222_0912_f34cfe534789_add_notifications_table.py  20251223_1517_b1dee5516e49_add_culture_exam_tables.py  20251224_1940_9b42371754b7_make_owner_superuser.py  20251228_2207_a484d1ae5325_change_governance_category_to_politics.py  20260107_1530_78dff0112c97_migrate_culture_deck_to_string.py  20260108_1705_1aef63b5f6f5_add_auth0_id_to_users.py  20260110_2216_a1b2c3d4e5f6_add_admin_feedback_response_fields.py  20260112_1100_ceda38aaf6b3_make_option_c_d_nullable.py  20260112_1600_b0161f8a_add_uppercase_feedback_notification_enum.py  20260113_1626_f9230d7fa07a_add_theme_to_user_settings.py  20260115_2103_0243cb807282_add_is_premium_to_decks.py  20260116_1623_2cb115953b2a_add_owner_id_to_decks_table.py  20260117_2150_7b7663a8d448_add_mock_exam_tables.py  20260118_1422_76173e4f6948_remove_notified_field_from_user_.py  20260120_1355_037928b86d1e_add_avatar_url_to_users.py  20260121_1205_7b0abae73df7_add_vector_embedding_columns_to_culture_questions.py  20260121_1543_29695fa3f73f_add_news_sources_table.py  20260122_1605_910421a50d22_add_source_fetch_history_table.py  20260123_1414_2f4a31fe7bbd_add_analysis_fields_to_source_fetch_.py  20260123_2119_3b2f0360881c_add_composite_index_culture_question_.py  20260124_0731_78f11edc75df_add_culture_question_generation_support.py  20260125_1346_0f218a2f969f_drop_news_tables.py  20260125_1724_c3c17642fed9_remove_icon_color_from_culture_decks.py  20260125_1925_8eb622462a2f_add_news_items_table.py  20260125_2051_0b7c0e9c9baf_add_russian_language_fields_to_news_.py  20260126_1043_591a7e0356d9_add_original_article_url_to_culture_.py  20260127_1130_e9377d765b32_add_announcement_campaigns_table_and_.py  20260127_1345_f1d6e4ac4839_fix_admin_announcement_enum_case.py  20260127_1624_92fbcfbc75fd_add_changelog_entries.py  20260128_1145_5208d6f4ad95_fix_level_up_notification_url.py  20260129_1129_14c4b1b4a7a8_remove_difficulty_and_order_index_from_.py  20260129_1208_c14242885019_add_classification_fields_to_cards.py  20260129_1229_83d73d26f04d_add_examples_jsonb_to_cards.py  20260129_1258_a90d6c7deeb3_add_grammar_jsonb_fields_to_cards.py  20260129_1303_014f35839083_add_card_search_array_fields.py  (+112 more)
learn-greek-easy-backend/docs/: deploy-safety.md  feature-background-tasks.md  gamification-shadow-rollout.md  health-and-uptime.md  logging.md  perf-10-diagnosis.md  wedge-02-topic-backfill.md
learn-greek-easy-backend/logs/: .gitkeep
learn-greek-easy-backend/scripts/: backfill_a1_deck_greek_names.sql  backfill_picture_match_exercises.py  backfill_sit_27_02_situation_domain.sql  import_cyprus_culture.py  migrate_users_to_auth0.py  seed_e2e_data.py  test_login_enhancements.py  verify_auth_me.py  verify_auth_middleware.py  verify_coverage_config.py  verify_database_fixtures.py  verify_jwt_tokens.py  verify_login.py  verify_parallel_execution.py  verify_pytest_async.py  verify_refresh.py  verify_registration.py  verify_session_management.py
learn-greek-easy-backend/src/: config.py  constants.py  main.py  scheduler_main.py
learn-greek-easy-backend/src/api/: __init__.py  health.py
learn-greek-easy-backend/src/core/: __init__.py  auth0.py  auth0_management.py  billing_utils.py  cache.py  culture_bank_version.py  culture_topic.py  culture_topic_mapping.py  culture_topic_reviewed_fixture.py  dependencies.py  event_bus.py  exceptions.py  exercise_topic.py  lexgen_authority.py  lexgen_forms.py  lexgen_g2p.py  lexgen_resolver.py  lexgen_rules.py  lexgen_verify.py  localization.py  logging.py  posthog.py  redis.py  security.py  sentry.py  sm2.py  stripe.py  subscription.py  supabase_admin.py  supabase_auth.py  word_proposal_state.py
learn-greek-easy-backend/src/db/: __init__.py  base.py  dependencies.py  models.py  session.py
learn-greek-easy-backend/src/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py  version.py
learn-greek-easy-backend/src/repositories/: __init__.py  announcement.py  base.py  card.py  card_error.py  card_record.py  card_record_review.py  card_record_statistics.py  changelog.py  culture_answer_history.py  culture_deck.py  culture_question.py  culture_question_stats.py  deck.py  exercise.py  exercise_record.py  exercise_review.py  feedback.py  mock_exam.py  news_item.py  news_source.py  notification.py  progress.py  review.py  session.py  source_fetch_history.py  user.py  webhook_event.py  word_entry.py
learn-greek-easy-backend/src/schemas/: __init__.py  admin.py  announcement.py  billing.py  card.py  card_error.py  card_record.py  changelog.py  culture.py  danger_zone.py  dashboard.py  deck.py  exercise_payload.py  exercise_queue.py  feedback.py  health.py  learner_situation.py  lexgen.py  mock_exam.py  news_item.py  nlp.py  notification.py  progress.py  review.py  seed.py  situation.py  sm2.py  user.py  v2_sm2.py  word_entry.py  xp.py
learn-greek-easy-backend/src/scripts/: backfill_image_derivatives.py  backfill_s3_cache_control.py  cefr_closed_class.py  export_deck_lemmas.py  load_cefr_lemma.py  load_frequency_rank.py  (+8 more)
learn-greek-easy-backend/tests/: base.py  conftest.py
(+3135 files in other folders)
